--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: clean page
       run: |
-        if [ -d "build" ]; then rm -r "build"; fi
+        if [ -d "docs" ]; then rm -r "docs"; fi
     - name: Setup illuaminate
       run: |
         if [ ! -d "bin" ]; then mkdir bin; fi
